cmake_minimum_required (VERSION 2.8)

# SET VARIABLES
set (CMAKE_GENERATOR "Unix Makefiles" CACHE INTERNAL "" FORCE)

# S E T VERSION NUMBER HERE
set (KCPPGame01_VERSION_MAJOR 0)
set (KCPPGame01_VERSION_MINOR 1)

# OPTIONS


# JUST SOME LOGIC (IGNORE)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(TARGET_DEBUG 1)
endif()

set(${BTARGET} 1)

if (TARGET_WEB_EM_GLES3_0)
    set(TARGET_ATTR_BIGENV_WEB 1)
    set(TARGET_ATTR_TOOL_EM 1)
    set(TARGET_ATTR_REND_GLES_3_0 1)
    set(TARGET_ATTR_RENDFB_GLES_2_0 1)
endif (TARGET_WEB_EM_GLES3_0)

if (TARGET_ATTR_TOOL_EM)
    set(TARGET_ATTR_WIND_GLFW 1)
    set(TARGET_ATTR_NET_EM 1)
endif (TARGET_ATTR_TOOL_EM)

# DELEGATE TO SOURCE CMAKELISTS
add_subdirectory(src)

